--- a/css/style.css
+++ b/css/style.css
@@ -657,3 +657,25 @@ h1 a{
         );
     margin-left: 5%;
 }
+
+.no-margin{
+    margin: 0 0;
+}
+
+.a-no-decoration{
+    text-decoration: none;
+    color: white;
+}
+
+#projects-link{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+}
+#a-to-projects{
+    width: 70%;
+    margin-left: 10%;
+}
